--- a/skul-frontend/src/Pages/Outline.css
+++ b/skul-frontend/src/Pages/Outline.css
@@ -4,6 +4,9 @@
 .btn-block3 {
   background: transparent;
 }
+.hr-2 {
+  display: none;
+}
 .skiller-col {
   display: flex;
 
@@ -30,8 +33,8 @@
   height: 60vh;
 }
 .skill-fever3 {
-  background-color: whitesmoke;
   height: 60vh;
+  background-color: whitesmoke;
 }
 .skill-fever4 {
   background-color: white;
@@ -71,6 +74,18 @@
   .skiller-col {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+  }
+  .hr-2 {
+    /* display: block;
+
+    color: gray; */
+  }
+  .skill-fever3 {
+    background-color: rgba(245, 245, 245, 0.658);
+    height: 60vh;
+  }
+  .skill-fever2 {
+    border-bottom: 1px solid rgb(248, 237, 237);
   }
 }
 
